stoped flicker and blob update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  background: url("MyResume\assets\img\bg.gif") top right no-repeat;
+  background: url("/assets/img/layered-waves-haikei (4).svg") top right no-repeat;
   background-size: cover;
 }
 @media (min-width: 992px) {
@@ -253,13 +253,14 @@ h1, h2, h3, h4, h5, h6 {
   margin: 15px 0 0 0;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
+  height: 80px;
 }
 #hero p span {
   color: #0563bb;
   letter-spacing: 1px;
 }
 #hero .social-links {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 #hero .social-links a {
   font-size: 24px;
@@ -274,13 +275,25 @@ h1, h2, h3, h4, h5, h6 {
   left: -15px;
 }
 .img-box{
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
+  padding:0px;
 }
 .myimg{
-  width:100%;
-  height:100%;
+  width:83%;
+  height:83%;
+  transform: rotate(30deg);
+  overflow: hidden;
 }
+.img-blob{
+  fill: #456d85;
+  transform: rotate(-30deg);
+  border-radius: 50%;
+  overflow: visible;
+}
+#pattern path{
+  stroke: rgb(0, 130, 190);
+}
+
+
 
 @media (max-width: 992px) {
   #hero {
@@ -300,11 +313,14 @@ h1, h2, h3, h4, h5, h6 {
     display: none;
     margin: auto;
   }
-  
-  
+
 }
 
 @media (max-width: 425px) {
+  #hero{
+    margin-bottom: 60px;
+    margin-top: -10px;
+  }
   #hero h1 {
     font-size: 32px;
     line-height: 36px;
@@ -313,6 +329,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 10px;
     font-size: 20px;
     line-height: 24px;
+  }
+  #hero .social-links a {
+    padding-right: 15px;
+    margin-right: 0px;
   }
 }
 
@@ -378,6 +398,7 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
